--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,20 +1,8 @@
-@*
- * This template takes a single argument, a String containing a
- * message to display.
- *@
-@(message: String)
+@main("Welcome Page") {
 
-@*
- * Call the `main` template with two arguments. The first
- * argument is a `String` with the title of the page, the second
- * argument is an `Html` object containing the body of the page.
- *@
-@main("Welcome to Play") {
-
-    @*
-     * Get an `Html` object by calling the built-in Play welcome
-     * template and passing a `String` message.
-     *@
-    @welcome(message, style = "java")
+    <div class="jumbotron">
+        <h1>Welcome to the BookStore App</h1>
+        <h3>Built using Play Framework 2.5</h3>
+    </div>
 
 }
