--- a/app/views/books/create.scala.html
+++ b/app/views/books/create.scala.html
@@ -1,16 +1,17 @@
 @(bookForm: Form[Book])
 
 @import helper._
+@import views.html.books.partials._bookFormFields
 
 @main("Create Book"){
     <h1>Create Book</h1>
 
     @helper.form(action = routes.BooksController.postCreate()){
-        @helper.inputText(bookForm("id"))
-        @helper.inputText(bookForm("title"))
-        @helper.inputText(bookForm("price"))
-        @helper.inputText(bookForm("author"))
 
-        <input type="submit" value="Create Book" class="btn btn-primary"/>
+        @_bookFormFields(bookForm)
+
+        <button class="btn btn-success" type="submit">
+            <i class="glyphicon glyphicon-plus"></i> Create Book
+        </button>
     }
 }
