--- a/app/views/books/details.scala.html
+++ b/app/views/books/details.scala.html
@@ -5,6 +5,6 @@
     <p>Price: @book.price $</p>
     <p>Author: @book.author</p>
 
-    <a href="@routes.BooksController.getEdit(book.id)">Edit</a>
-    <a href="@routes.BooksController.delete(book.id)">Delete</a>
+    <a class="btn btn-primary" href="@routes.BooksController.getEdit(book.id)">Edit</a>
+    <a class="btn btn-danger" href="@routes.BooksController.delete(book.id)">Delete</a>
 }
