added js for put and delete requests. Added custom error page

--- a/app/views/books/details.scala.html
+++ b/app/views/books/details.scala.html
@@ -6,5 +6,9 @@
     <p>Author: @book.author</p>
 
     <a class="btn btn-primary" href="@routes.BooksController.getEdit(book.id)">Edit</a>
-    <a class="btn btn-danger" href="@routes.BooksController.delete(book.id)">Delete</a>
+
+    <button class="btn btn-danger" onclick="sendDeleteRequest(
+        '@routes.BooksController.getEdit(book.id)',
+        '@routes.HomeController.index()'
+    )">Delete</button>
 }
