--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -49,6 +49,19 @@
             </div>
         </nav>
 
+        <div class="container">
+
+            @for(key <- Array("danger", "info", "success", "warning")){
+                @if(flash.containsKey(key)){
+                    <div class="alert alert-@key" role="alert">
+                        @flash.get(key)
+                        <a href="#" class="close" aria-label="close" data-dismiss="alert"><i class="glyphicon glyphicon-remove"></i></a>
+                    </div>
+                }
+            }
+
+        </div>
+
 
         <div class="container">
             <div class="row">
@@ -59,7 +72,7 @@
         </div>
 
         <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("bootstrap-3.3.7-dist/js/boostrap.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bootstrap-3.3.7-dist/js/bootstrap.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
     </body>
 </html>
