--- a/app/views/books/edit.scala.html
+++ b/app/views/books/edit.scala.html
@@ -15,7 +15,7 @@
         @*</button>*@
     }
 
-    <button class="btn btn-primary" type="submit" onclick="sendPutRequest('bookUpdateForm', '@routes.BooksController.putEdit()')">
+    <button class="btn btn-primary" type="submit" onclick="sendPutRequest('bookUpdateForm', '@routes.BooksController.getBooks()')">
         <i class="glyphicon glyphicon-edit"></i> Edit Book
     </button>
 
