--- a/app/views/books/list.scala.html
+++ b/app/views/books/list.scala.html
@@ -1,7 +1,13 @@
 @(books: List[Book])
 
 @main("All books"){
-    <h1>All books</h1>
+
+    @if(books.isEmpty){
+        <h1>No books exist yet</h1>
+    }else{
+        <h1>All books</h1>
+    }
+
     @for(book <- books){
         <a class="btn btn-link" href="@routes.BooksController.getBook(book.id)">@book.title</a>
         <p>Price: @book.price</p>
