--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -74,5 +74,6 @@
         <script src="@routes.Assets.versioned("javascripts/jquery-3.3.1.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("bootstrap-3.3.7-dist/js/bootstrap.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </body>
 </html>
